Fix overflowing content on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ a {
 
 #jumbotron {
   padding-top: 30vh;
-  height: 102vh;
+  min-height: 102vh;
   width: 100%;
   pointer-events: none;
 }
@@ -88,7 +88,7 @@ a {
 #about {
   padding-left: 10%;
   padding-right: 10%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -114,7 +114,7 @@ a {
   padding-left: 10vw;
   padding-right: 10vw;
   text-align: right;;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -158,7 +158,7 @@ a {
 #projects {
   padding-left: 10%;
   padding-right: 10%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -185,7 +185,7 @@ a {
 #contact {
   padding-left: 10%;
   padding-right: 10%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
